--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ body {
   color: white;
   font-family: "Ubuntu", sans-serif;
 }
-
+/* Esto es un comentario*/
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 
 .fila {
